fix backend errors