@@ -1,12 +1,12 @@
-package com.lerning.api.service;
+package com.learning.api.service;
 
-import com.lerning.api.entity.BlogData;
-import com.lerning.api.entity.GetAllBlog;
-import com.lerning.api.entity.User;
-import com.lerning.api.exception.UserNotFoundException;
-import com.lerning.api.repositories.BlogRepo;
-import com.lerning.api.repositories.UserRepo;
-import com.mongodb.client.model.Aggregates;
+import com.learning.api.entity.BlogData;
+import com.learning.api.entity.GetAllBlog;
+import com.learning.api.entity.User;
+import com.learning.api.exception.BlogNotFoundException;
+import com.learning.api.exception.UserNotFoundException;
+import com.learning.api.repositories.BlogRepo;
+import com.learning.api.repositories.UserRepo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
@@ -15,7 +15,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -58,9 +57,9 @@ public class BlogService {
 
     public List<BlogData> getAllBlogsOfUser() {
         String email = SecurityContextHolder.getContext().getAuthentication().getName();
-        Optional<User> userOp = userRepo.findByEmail(email);
+        User user = userRepo.findByEmail(email).orElseThrow(() -> new UserNotFoundException(email));
 
-        return userOp.map(user -> blogRepo.findAllById(user.getBlogId().stream().map(BlogData::getId).toList())).orElseGet(ArrayList::new);
+        return blogRepo.findAllById(user.getBlogId());
     }
 
     public GetAllBlog geBlogDataById(String id) throws Exception {
@@ -74,18 +73,14 @@ public class BlogService {
     }
 
     public BlogData updateBlog(String id, BlogData update) throws Exception {
-        BlogData blog = blogRepo.findById(id).get();
-        if (blog == null) throw new Exception("Invalid data");
-        else {
-            String email = SecurityContextHolder.getContext().getAuthentication().getName();
-            User user = userRepo.findByEmail(email).get();
-            if (user.getBlogs().contains(blog)) {
-                if (update.getContent() != null) blog.setContent(update.getContent());
-                if (update.getTitle() != null) blog.setTitle(update.getTitle());
-                if (update.getCoverImage() != null) blog.setCoverImage(update.getCoverImage());
-                return blogRepo.save(blog);
-            } else throw new Exception("Invalid user");
-        }
+        BlogData blog = blogRepo.findById(id).orElseThrow(() -> new BlogNotFoundException(id));
+        String email = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userRepo.findByEmail(email).orElseThrow(() -> new UserNotFoundException(email));
+        if (!user.getBlogId().contains(id)) throw new Exception("Invalid user");
+        if (update.getContent() != null) blog.setContent(update.getContent());
+        if (update.getTitle() != null) blog.setTitle(update.getTitle());
+        if (update.getCoverImage() != null) blog.setCoverImage(update.getCoverImage());
+        return blogRepo.save(blog);
     }
 
     @Transactional
@@ -93,10 +88,10 @@ public class BlogService {
         try {
             // Get and check the block if exist or throw exception
             String email = SecurityContextHolder.getContext().getAuthentication().getName();
-            User user = userRepo.findByEmail(email).get();
-            BlogData blog = blogRepo.findById(id).get();
-            if (user.getBlogs().contains(blog)) {
-                user.getBlogs().removeIf(b -> b.getId().equals(id));
+            User user = userRepo.findByEmail(email).orElseThrow(() -> new UserNotFoundException(email));
+            BlogData blog = blogRepo.findById(id).orElseThrow(() -> new BlogNotFoundException(id));
+            if (user.getBlogId().contains(blog.getId())) {
+                user.getBlogId().remove(id);
                 blogRepo.deleteById(id);
                 userRepo.save(user);
             } else throw new Exception("Invalid user");
@@ -112,9 +107,14 @@ public class BlogService {
             Optional<List<BlogData>> blogsOptional = blogRepo.findAllByTitleContainingOrderByTimeDesc(title);
             if (blogsOptional.isPresent()) {
                 List<BlogData> blogs = blogsOptional.get();
-                List<User> users = userRepo.findAll();
-
-                return users.stream().flatMap(user -> user.getBlogs().stream().filter(blogs::contains).map(blogData -> new GetAllBlog(user.getId(), user.getName(), user.getPhoto(), blogData))).collect(Collectors.toList());
+                return blogs.stream().map(blog -> {
+                    Optional<User> userOp = userRepo.findById(blog.getUserId());
+                    if (userOp.isPresent()) {
+                        User user = userOp.get();
+                        return new GetAllBlog(user.getId(), user.getName(), user.getPhoto(), blog);
+                    }
+                    return null;
+                }).toList();
             } else throw new Exception("Blog not found");
         } catch (Exception e) {
             logger.error(e.getMessage());
@@ -142,11 +142,10 @@ public class BlogService {
 
     public List<GetAllBlog> getAllBlogsWithUserInfo() {
         List<User> users = userRepo.findAll();
-        // List<GetAllBlog> getAllBlogs = new ArrayList<>();
-        return users.stream().flatMap(user -> user.getBlogs().stream().map(blog -> new GetAllBlog(user.getId(), user.getName(), user.getPhoto(), blog)
-                // getAllBlogs.add(getAllBlog);
-        )).collect(Collectors.toList());
-
+        return users.stream().flatMap(user ->
+                blogRepo.findAllById(user.getBlogId()).stream().map(blog ->
+                        new GetAllBlog(user.getId(), user.getName(), user.getPhoto(), blog)
+                )).toList();
     }
 
 }
